# TooManyConfigs

./: README.md  pyproject.toml
src/: apiconfig.toml  json_api.toml  test.py  test2.toml  test3.toml
src/toomanyconfigs/: __init__.py  api.py  core.py  cwd.py  simple_api.py
