[project]
name = "toomanyconfigs"
version = "0.1.1"
description = ""
authors = [
    {name = "Miles Copeland Luce"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "toomanyconfigs", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
